<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calc_tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_1_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_4"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_2"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_2_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_5"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_3"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_3_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_6"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_plus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_plus_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_4"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_4_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_7"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_5"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_5_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_8"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_6"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_6_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_9"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_minus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_minus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_minus"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_7"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_7_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_0"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_8"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_8_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_dot"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_9"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_9_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_equals"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_multiply"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_multiply_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/calc_btn_slash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_9" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_0"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_0_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_dot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_dot"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_dot_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_equals"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_equals"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_equals_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/calc_btn_slash"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_btn_slash"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/calc_btn_size"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/calc_btn_slash_text"
            android:textSize="@dimen/calc_btn_text_size"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_btn_equals" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>